# bootstrapper-ml

./: .gitignore  README.md  pyproject.toml
app/: main.py
data/: README.md
docs/: use-cases.md
experiments/: README.md
models/: README.md
pipelines/: README.md
src/bootstrapper/templates/default/: template.yaml
