# TOML configuration file for the bootstrapper

[project]

# Change the following values to match your project details

name = "bootstrapper"
version = "0.1.0"
description = "Production ready bootstrapper project template for Python 3.12+"

# The following line specifies the minimum Python version required for your project.
requires-python = ">=3.12"

dependencies = [

    # Base Bootstrap Dependencies
    "pytest",
    "ruff",

    # Add any project-specific dependencies here
]